--- a/notebook/Cargo.toml
+++ b/notebook/Cargo.toml
@@ -10,3 +10,4 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
 anyhow = "1.0"
 structopt = "0.3"
+thiserror = "1.0"
