--- a/notebook_main/Cargo.toml
+++ b/notebook_main/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "notebook"
+name = "notebook_main"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
 tokio = { version = "1.38", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
 anyhow = "1.0"
-structopt = "0.3"
-thiserror = "1.0"
+sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
+notebook_api = { path = "../notebook_api"}
