Start write documentation

--- a/notebook_main/Cargo.toml
+++ b/notebook_main/Cargo.toml
@@ -2,6 +2,9 @@
 name = "notebook_main"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/Nnenty/notebook"
+description = "Binary file to run notebook"
 
 [dependencies]
 tokio = { version = "1.38", features = ["full"] }
