--- a/notebook_api/Cargo.toml
+++ b/notebook_api/Cargo.toml
@@ -2,6 +2,9 @@
 name = "notebook_api"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/Nnenty/notebook"
+description = "API to creating notebooks that stores notes in a database"
 
 [dependencies]
 sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
