--- a/notebook_example/Cargo.toml
+++ b/notebook_example/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "notebook_main"
+name = "notebook_example"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/Nnenty/notebook_api"
-description = "Binary file to run notebook"
+publish = false
 
 [dependencies]
 tokio = { version = "1.38", features = ["full"] }
