--- a/lnotebook_api/Cargo.toml
+++ b/lnotebook_api/Cargo.toml
@@ -3,8 +3,8 @@ name = "lnotebook_api"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/Nnenty/notebook"
-description = "API to creating notebooks that stores notes in a database"
+repository = "https://github.com/Nnenty/lnotebook_api"
+description = "asynchronous API to creating notebooks that stores notes in a database"
 
 [dependencies]
 sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
