--- a/notebook_example/Cargo.toml
+++ b/notebook_example/Cargo.toml
@@ -10,4 +10,4 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
 anyhow = "1.0"
 sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
-lnotebook_api = { path = "../lnotebook_api"}
+lnotebook = { path = "../lnotebook"}
