--- a/lnotebook/Cargo.toml
+++ b/lnotebook/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/Nnenty/lnotebook"
 description = "asynchronous API to creating notebooks that stores notes in a database"
+readme = "../README.md"
 
 [dependencies]
 sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
